Add bower_components to /dist folder for production github

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ validation-report.json
 validation-status.json
 
 # Folders to ignore
-bower_components
+/bower_components
 node_modules
 
 # Codio
